<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="hello">Choose one of the features below.</string>
    <string name="description_logo">Demo</string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Feature 1</string>
    <string name="description_feature2">Feature 2</string>
    <string name="description_feature3">Feature 3</string>
    <string name="description_feature4">Feature 4</string>
    <string name="description_feature5">Feature 5</string>
    <string name="description_feature6">Feature 6</string>
    <string name="title_about">About</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_login">AFA FIELD APP</string>
    <string name="title_feature1">My Account</string>
    <string name="title_feature2">AFA Groups</string>
    <string name="title_feature3">Sugar Directorate</string>
    <string name="title_freshMember">Fresh Registrations</string>
    <string name="title_feature4">Transactions</string>
    <string name="title_feature5">Exit App</string>
    <string name="title_feature6">Help</string>
    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Not Implemented.</string>
    <string name="feature2_intro">Not Implemented</string>
    <string name="feature3_intro">Not Implemented</string>
    <string name="feature4_intro">Not Implemented.</string>
    <string name="feature5_intro">Not Implemented</string>
    <string name="feature6_intro">Not Implemented.</string>
    <string name="about_introduction" translatable="false">AFA Mobile Field Application aids in conducting surveys and field inspections. Its integrated to AFA IMIS.
              The Authority is the successor of former regulatory institutions in the sector that were merged into Directorates under the Authority, with the commencement of Crops Act, 2013 on 1st August 2014 , including Coffee Board of Kenya, Kenya Sugar Board, Tea Board of Kenya, Coconut Development Authority, Cotton Development Authority,
                Sisal Board of Kenya, Pyrethrum Board of Kenya, Horticultural Crops Development Authority.</string>
    <string name="about_page_description" translatable="false">The <b>Agriculture and Food Authority (AFA)</b> is a state corporation established through an Act of Parliament specifically, under section 3 of the Agriculture, Fisheries and Food Authority Act of 2013.\n\n <b>Vision: </b> \n To be a World Class Regulator in the Agriculture Sector \n\n <b>Mission:</b> \n To sustainably develop and promote scheduled crops value chains through effective regulation for economic growth \n\n <b>Core values: </b>\n The Authority is committed to excellent service delivery based of the following core values: \n\t Professionalism \n\t Integrity \n\t Customer focus \n\t Teamwork \n\t Innovativeness \n\n<b>Motto: </b>\n Our crops our wealth</string>
    <string name="search_intro">Empty search</string>
    <string name="app_name">AFA Mobile</string>
    <string name="login_screen">Welcome to AFA Mobile Field</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="title_activity_change_pass">ChangePassActivity</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_group_a">GroupAActivity</string>
    <string name="title_activity_group_b">GroupBActivity</string>
    <string name="title_activity_group_c">GroupCActivity</string>
    <string name="title_activity_group_d">GroupDActivity</string>
    <string name="title_activity_group_e">GroupEActivity</string>
    <string name="title_activity_registrations">RegistrationsActivity</string>
    <string name="title_activity_fresh_member">FreshMemberActivity</string>
    <string name="title_activity_follow_up">FollowUpActivity</string>
    <string name="title_activity_follow_up_info">FollowUpInfoActivity</string>
    <string name="header">AFA  Mobile App</string>
    <string name="fresh">Fresh Member Registration</string>
    <string name="follow">Follow Up Registration</string>
    <string name="group">AFA Groups-Select group to administer</string>
    <string name="check">Check Available Group Members</string>
    <string name="title_activity_login">FieldLogin</string>
    <string name="groupsList_title">Group List</string>
    <string name="failed_to_download_status">Failed to download the List</string>
    <string name="userInfo_errorRetrievingUserInfo">Failed to retrieve information</string>
    <string name="userInfo_errorPersistingUserInfo">Failed to save information</string>
    <string name="baseURI">http://212.22.169.19:8080</string>
    <string name="baseUsername">brisk.afa.mobile@gmail.com</string>
    <string name="basePassword">abc123</string>
    <string name="auth">users/auth</string>
    <string name="prompt_username">Field Username</string>
    <string name="prompt_password">Field Password</string>
    <string name="action_sign_in">register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="username_hint">Field email&#8230;</string>
    <string name="password_hint">Field password&#8230;</string>
    <string name="password_your_hint">Your password&#8230;</string>
    <string name="change_password_repeat_hint">Repeat New password&#8230;</string>
    <string name="change_password_hint">New password&#8230;</string>
    <string name="login_label">Login</string>
    <string name="login_screen_label">AFA FIELD MOBILE APP</string>
    <string name="change_password_label">Change Your Password</string>
    <string name="cancel_label">Clear</string>
    <string name="skip">Skip To Next</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="title_activity_transactions">TransactionsActivity</string>
    <string name="title_activity_available">AvailableActivity</string>
    <string name="title_activity_payments">PaymentsActivity</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="title_activity_my_account_fragment">MyAccountFragment</string>
    <string name="title_activity_groups_fragment">GroupsFragment</string>
    <string name="title_activity_transactions_fragment">TransactionsFragment</string>
    <string name="title_activity_registrations_fragment">RegistrationsFragment</string>
    <string name="title_activity_exit_fragment">ExitFragment</string>
    <string name="bsl_pref_file">co.ke.bsl.PREF_FILE</string>
    <string name="downloadGroups">DownloadGroups</string>
    <string name="document_no">Document Number </string>
    <string name="document_date">Document Date</string>
    <string name="city">City</string>
    <string name="type_of_sugar_prices_survey">Type of Sugar Prices Survey</string>
    <string name="Supermarket_Shop">Supermarket/Shop</string>
    <string name="Local_branded_sugar_1kg">Local Branded Sugar 1kg</string>
    <string name="local_branded_sugar_2kg">Local Branded Sugar 2kg</string>
    <string name="local_sugar_50kg_bag">Local Sugar 50kg Bag</string>
    <string name="Imported_sugar_50kg_Bag">Imported Sugar 50kg Bag</string>
    <string name="survey_ending">Survey Ending</string>
    <string name="save">Submit</string>
    <string name="next">Next</string>
    <string name="addmore">Add New</string>
    <string name="sugar_survey_wholesale">Sugar Prices Survey </string>
    <string name="sugar_survey_retail">Sugar Retail Prices Survey </string>
    <string name="sugar_mollases_production_inspection">Sugar and Molasses Production Factory Inspection</string>
    <string name="sugar_mill_compliance_visit_checklist">Sugar Mill License Compliance Visit Checklist </string>
    <string name="sugar_miller_license_conformance_assement">Sugar Miller License Conformance Assessment </string>
    <string name="title_surveySetup">Survey Setup Step 1 Of 5 </string>
    <string name="title_shop">Shop Detail Step 2 Of 5 </string>
    <string name="title_whole_sale_local"> Local Sugar Prices Range Step 3 Of 5</string>
    <string name="title_whole_sale_import"> Imported Sugar Prices Range  Step 4 Of 5</string>
    <string name="title_whole_sale_local_stocked"> Local Stocked Sugar  Step 4 Of 5</string>
    <string name="title_whole_sale_import_stocked"> Imported  Stocked Sugar Step 5 Of 5</string>
    <string name="Brand">Sugar Brand</string>
    <string name="whole_sale_shop">Shop name</string>
    <string name="price_of_1kg">Price of 1 KG</string>
    <string name="price_of_2kg">Price of 2 KG</string>
    <string name="county_of_origin">Country of Origin</string>
    <string name="price_of_50kg">Price of 50 KG Bag</string>
    <string name="price_of_24kg">Price of 24KG Bale</string>
    <string name="price_of_20kg">Price of 20KG Bale</string>
    <string name="name_of_the_applicant">Name of Applicant</string>
    <string name="sugar_company">Sugar Company</string>
    <string name="date_of_the_inspection">Date of Inspection</string>
    <string name="select_return">Select Return</string>
    <string name="date_of_return">Date of Returns</string>
    <string name="Zone">Zone</string>
    <string name="remaks">Remarks</string>
    <string name="sugar_production_tons">Sugar Production (Tons)</string>
    <string name="sugar_production">Sugar Production</string>
    <string name="sugar_sales">Sugar Sales (Tons)</string>
    <string name="closing_stock_tons">Closing Stock (Tons)</string>
    <string name="fifty_kg_bag">50 KG bag</string>
    <string name="bag_25kg">25 KG bag</string>
    <string name="bale_25KG">25 KG bale</string>
    <string name="bale_24kg">24 KG bale</string>
    <string name="bale_20kg">20 KG bale</string>
    <string name="bale_18kg">18 KG bale</string>
    <string name="bale_15kg">15 KG bale</string>
    <string name="bale_12kg">12 KG bale</string>
    <string name="bale_10kg">10 KG bale</string>
    <string name="county">County</string>
    <string name="search">Search/Query Records</string>
    <string name="title_followMember">Follow Up Registrations</string>
    <string name="vacancyInfo_slotSave">Updating Password Please wait</string>
    <string name="password_change_sucess">Password Updated Successfully</string>
    <string name="password_change_failed">Survey Submission Failed</string>
    <string name="password_change">Password Change</string>
    <string name="agent_error_postingOrderFailed">Posting the Field details failed.\n\nError details have been logged.\n\nError Message: \&#34;%1$s\&#34;\n\n</string>
    <string name="registration_sucess">Survey Details Successfully Submitted</string>
    <string name="registration_failed">Survey Details  Submission Failed</string>
    <string name="total">Total</string>
    <string name="sector">Sector</string>
    <string name="pc">PC</string>
    <string name="r1">R1</string>
    <string name="r2">R2</string>
    <string name="r3">R3</string>
</resources>