<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.ke.bsl.fragment.SugarSurveyFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/background1"
        android:orientation="vertical" >



        <TextView
            android:id="@+id/survey_type"
            style="@style/CustomAddLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/type_of_sugar_prices_survey" />

        <Spinner
            android:id="@+id/type_of_sugar_prices_survey_text"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/city"
            style="@style/CustomAddLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/city" />


        <Spinner
            android:id="@+id/city_text"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/document_no"
            style="@style/CustomAddLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/document_no" />

        <Spinner
            android:id="@+id/document_no_text"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/document_date"
            style="@style/CustomAddLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/document_date" />

        <EditText
            android:id="@+id/document_date_text"
            style="@style/CustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:editable="false"
            android:hint="Document Date"
            android:inputType="date" />




        <TextView
            android:id="@+id/survey_ending"
            style="@style/CustomAddLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/survey_ending" />

        <EditText
            android:id="@+id/survey_ending_text"
            style="@style/CustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:editable="false"
            android:hint="End Date"
            android:onClick="pickDate" />






        <Button
            android:id="@+id/nextShop"
            style="@style/CustomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/next" />

        <Button
            android:id="@+id/reset"
            style="@style/CustomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"

            android:text="@string/cancel_label" />
    </LinearLayout>

</ScrollView>
