<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.ke.bsl.sisdo.activity.DailyReturnsInspectionActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/background1"
        android:orientation="vertical" >
        <include layout="@layout/title_bar" />


        <!-- <include layout="@layout/title_bar" /> -->

        <TextView
            android:id="@+id/sector"
            style="@style/CustomAddLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sector" />


        <Spinner
            android:id="@+id/sector_text"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp" />







        <TextView
            android:id="@+id/pc"
            style="@style/CustomAddLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/pc" />

        <EditText
            android:id="@+id/pc_text"
            style="@style/CustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:hint="@string/pc"
            android:inputType="number" />

        <TextView
            android:id="@+id/r1"
            style="@style/CustomAddLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/r1" />

        <EditText
            android:id="@+id/r1_text"
            style="@style/CustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:hint="@string/r1"
            android:inputType="number" />



        <TextView
            android:id="@+id/r2"
            style="@style/CustomAddLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/r2"/>

        <EditText
            android:id="@+id/r2_text"
            style="@style/CustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:hint="@string/r2"
            android:inputType="number" />



        <TextView
            android:id="@+id/r3"
            style="@style/CustomAddLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/r3"/>

        <EditText
            android:id="@+id/r3_text"
            style="@style/CustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:hint="@string/r3"
            android:inputType="number" />



        <TextView
            android:id="@+id/total"
            style="@style/CustomAddLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/total"/>

        <EditText
            android:id="@+id/total_text"
            style="@style/CustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:hint="@string/total"
            android:inputType="number" />


        <TextView
            android:id="@+id/remaks"
            style="@style/CustomAddLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/remaks"/>

        <EditText
            android:id="@+id/remaks_text"
            style="@style/CustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:hint="@string/total"
            android:inputType="textLongMessage" />



        <Button
            android:id="@+id/save"
            style="@style/CustomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:onClick="buttonClickListener"
            android:text="@string/next" />

        <Button
            android:id="@+id/clear"
            style="@style/CustomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:onClick="buttonClickListener"
            android:text="@string/cancel_label" />
    </LinearLayout>

</ScrollView>